kubernetes/apps/devops-tools/jenkins/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      serviceAccountName: jenkins-admin
      # initContainers: //TODO after change the security context above for both to 1000
      #   - name: install-dependencies
      #     image: jenkins/jenkins:2.405
      #     securityContext:
      #       runAsUser: 0
      #     command: ["sh", "-c", "apt-get update && apt install -y build-essential"]
      #     volumeMounts:
      #       - name: jenkins-data
      #         mountPath: /var/jenkins_home
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.405
          command: ["sh", "-c", "sh /dependencies.sh && /usr/local/bin/jenkins.sh"] # //TODO: remove
          resources:
            limits:
              memory: "10Gi"
              cpu: "2500m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: jenkins-dependencies-configmap
              mountPath: /dependencies.sh
              subPath: dependencies.sh
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
        - name: jenkins-dependencies-configmap
          configMap:
            name: jenkins-dependencies
